--- a/fake_newsdetection_with_NLP.ipynb
+++ b/fake_newsdetection_with_NLP.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Author:Shashank\n",
     "# General Feature Extraction\n",
     "## File lloading\n",
     "# wordsCOunt\n",
